<resources>
    <string name="app_name">Catalogue Movie</string>

    <!-- Menu -->
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="search_movie">Search Movie</string>
    <string name="settings">Settings</string>

    <string name="title"> Title </string>
    <string name="description"> Description </string>
    <string name="rating"> Rating</string>
    <string name="popularity"> Popularity</string>
    <string name="language"> Language</string>
    <string name="number"> 10 </string>
    <string name="en"> EN</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="detail_movie">Detail Movie</string>

    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="delete_from_favorite">Delete from Favorite</string>
    <string name="add_failed">Add Failed</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="appwidget_text">No Data</string>
    <string name="remainder_setting">Remainder Setting</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_remainder_settings">Remainder Settings</string>
    <string name="key_release_remainder">release_remainder</string>
    <string name="key_daily_remainder">daily_remainder</string>
    <string name="pref_daily_title">Daily Remainder</string>
    <string name="pref_release_Title">Release Remainder</string>


    <string name="message_daily_remainder">Movie Remainder Today</string>


</resources>
